--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.1.0",
+    "@sendgrid/mail": "^6.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -24,6 +25,7 @@
     "mongoose": "^5.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
