--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.1",
     "nodemailer": "^6.3.0",
+    "nodemailer-express-handlebars": "^3.1.0",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
