--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "connected-react-router": "^6.4.0",
     "eslint": "5.12.0",
+    "formik": "^1.5.8",
     "lodash": "^4.17.11",
     "ramda": "^0.26.1",
     "react": "^16.8.5",
