--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "cross-env-shell NODE_ENV=development nodemon --experimental-modules app.mjs",
     "prod": "cross-env-shell NODE_ENV=production node --experimental-modules app.mjs",
-    "stop": "taskkill /F /IM node.exe"
+    "stop": "taskkill /F /IM node.exe",
+    "push": "git add . && git commit -m default -n && git push"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.0",
