--- a/client/package.json
+++ b/client/package.json
@@ -57,10 +57,10 @@
     "eslint-plugin-notice": "^0.7.7",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "redux-mock-store": "^1.5.3",
     "husky": "^1.2.1",
     "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3",
-    "redux-mock-store": "^1.5.3"
+    "prettier": "^1.15.3"
   },
   "lint-staged": {
     "*.{js, jsx}": [
