--- a/client/package.json
+++ b/client/package.json
@@ -3,27 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
-    "@types/react": "^16.8.18",
-    "@types/react-dom": "^16.8.4",
-    "classnames": "^2.2.6",
+    "@material-ui/core": "3.9.3",
+    "@types/jest": "24.0.13",
+    "@types/node": "12.0.2",
+    "@types/react": "16.8.18",
+    "@types/react-dom": "16.8.4",
+    "classnames": "2.2.6",
     "eslint": "5.12.0",
-    "formik": "^1.5.8",
-    "ramda": "^0.26.1",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-input-mask": "^2.0.4",
-    "react-redux": "^6.0.1",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^2.1.8",
-    "react-text-mask": "^5.4.3",
-    "redux": "^4.0.1",
-    "redux-form": "^8.1.0",
-    "redux-saga": "^1.0.2",
-    "reselect": "^4.0.0",
-    "typescript": "^3.4.5"
+    "formik": "1.5.8",
+    "ramda": "0.26.1",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
+    "react-input-mask": "2.0.4",
+    "react-intl": "^3.1.5",
+    "react-redux": "6.0.1",
+    "react-router-dom": "5.0.0",
+    "react-scripts": "2.1.8",
+    "react-text-mask": "5.4.3",
+    "redux": "4.0.1",
+    "redux-form": "8.1.0",
+    "redux-saga": "1.0.2",
+    "reselect": "4.0.0",
+    "typescript": "3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,7 +33,8 @@
     "test:coverage": "react-scripts test --coverage",
     "precommit": "lint-staged",
     "test:all": "react-scripts test --env=jsdom",
-    "push": "cd .. && npm run push && cd client"
+    "push": "cd .. && npm run push && cd client",
+    "translate": "cross-env NODE_ENV=production babel ./src >/dev/null"
   },
   "browserslist": {
     "development": [
@@ -49,18 +51,21 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.7.0",
-    "enzyme-to-json": "^3.3.4",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-notice": "^0.7.7",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "redux-mock-store": "^1.5.3",
-    "husky": "^1.2.1",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3"
+    "babel-cli": "^6.26.0",
+    "babel-plugin-react-intl": "^4.1.11",
+    "babel-preset-react-app": "^9.0.1",
+    "enzyme": "3.7.0",
+    "enzyme-adapter-react-16": "1.7.0",
+    "enzyme-to-json": "3.3.4",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "3.3.0",
+    "eslint-plugin-notice": "0.7.7",
+    "eslint-plugin-prettier": "3.0.0",
+    "eslint-plugin-react": "7.11.1",
+    "husky": "1.2.1",
+    "lint-staged": "8.1.0",
+    "prettier": "1.15.3",
+    "redux-mock-store": "1.5.3"
   },
   "lint-staged": {
     "*.{js, jsx}": [
