--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,16 @@
     "classnames": "2.2.6",
     "eslint": "5.12.0",
     "formik": "1.5.8",
+    "i18next": "^17.0.11",
+    "i18next-browser-languagedetector": "^3.0.3",
+    "i18next-xhr-backend": "^3.1.1",
     "ramda": "0.26.1",
     "react": "16.8.5",
     "react-dom": "16.8.5",
-    "react-input-mask": "2.0.4",
-    "react-intl": "^3.1.5",
+    "react-i18next": "^10.12.1",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "2.1.8",
-    "react-text-mask": "5.4.3",
     "redux": "4.0.1",
     "redux-form": "8.1.0",
     "redux-saga": "1.0.2",
@@ -33,8 +34,7 @@
     "test:coverage": "react-scripts test --coverage",
     "precommit": "lint-staged",
     "test:all": "react-scripts test --env=jsdom",
-    "push": "cd .. && npm run push && cd client",
-    "translate": "cross-env NODE_ENV=production babel ./src >/dev/null"
+    "push": "cd .. && npm run push && cd client"
   },
   "browserslist": {
     "development": [
@@ -52,7 +52,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-react-intl": "^4.1.11",
     "babel-preset-react-app": "^9.0.1",
     "enzyme": "3.7.0",
     "enzyme-adapter-react-16": "1.7.0",
