--- a/server/public/manifest.json
+++ b/server/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "loft-taxi-app",
-  "name": "loft-taxi-app",
+  "short_name": "mail-verifyer",
+  "name": "mail-verifyer",
   "icons": [
     {
       "src": "favicon.ico",
