--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "loft-taxi-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@types/jest": "24.0.13",
