--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "mkdirp-promise": "^5.0.1"
   },
   "devDependencies": {
