--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "16.8.4",
     "classnames": "2.2.6",
     "eslint": "5.12.0",
+    "eslint-plugin-react": "7.11.1",
     "formik": "1.5.8",
     "i18next": "^17.0.11",
     "i18next-browser-languagedetector": "^3.0.3",
@@ -27,7 +28,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "typescript": "3.4.5",
-    "eslint-plugin-react": "7.11.1"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
