--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "npm run install:all && npm run build:client && npm run copy",
+    "heroku-prebuild": "npm run install:all",
+    "build":"npm run build:client && npm run copy",
+    "start": "npm run server:prod",
     "copy": "cd scripts/copier && node --experimental-modules interface.mjs",
     "client": "cd client && npm start",
     "build:client": "cd client && npm run build",
     "server:dev": "cd server && npm run dev",
     "server:prod": "cd server && npm run prod",
     "start:dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server:dev\"",
-    "start": "npm run server:prod",
     "start:local": "cross-env-shell NODE_ENV=production npm run build:client && npm run copy && npm run server:prod",
     "stop": "taskkill /F /IM node.exe",
     "install:server": "cd server && npm i",
