--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "eslint": "5.12.0",
     "eslint-plugin-react": "7.11.1",
     "formik": "1.5.8",
-    "i18next": "^17.0.11",
+    "i18next": "17.0.11",
     "i18next-browser-languagedetector": "^3.0.3",
     "i18next-xhr-backend": "^3.1.1",
     "ramda": "0.26.1",
     "react": "16.8.5",
     "react-dom": "16.8.5",
-    "react-i18next": "^10.12.1",
+    "react-i18next": "10.12.1",
     "react-redux": "6.0.1",
     "react-router-dom": "5.0.0",
     "react-scripts": "2.1.8",
@@ -28,7 +28,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "typescript": "3.4.5",
-    "yup": "^0.27.0"
+    "yup": "0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
