--- a/server/package.json
+++ b/server/package.json
@@ -9,25 +9,25 @@
     "push": "cd .. && npm run push && cd server"
   },
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "cross-env": "^5.2.0",
-    "dotenv": "^8.0.0",
-    "express": "~4.16.1",
-    "express-rate-limit": "^5.0.0",
-    "helmet": "^3.20.0",
-    "http-errors": "~1.6.3",
-    "jimp": "^0.6.4",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongo-sanitize": "^1.0.1",
-    "mongoose": "^5.6.3",
-    "morgan": "~1.9.1",
-    "multer": "^1.4.1",
-    "nodemailer": "^6.3.0",
-    "nodemailer-express-handlebars": "^3.1.0",
-    "rimraf": "^2.6.3"
+    "@hapi/joi": "15.1.0",
+    "cookie-parser": "1.4.4",
+    "cors": "2.8.5",
+    "cross-env": "5.2.0",
+    "dotenv": "8.0.0",
+    "express": "4.16.1",
+    "express-rate-limit": "5.0.0",
+    "helmet": "3.20.0",
+    "http-errors": "1.6.3",
+    "jimp": "0.6.4",
+    "jsonwebtoken": "8.5.1",
+    "lodash": "4.17.15",
+    "mongo-sanitize": "1.0.1",
+    "mongoose": "5.6.3",
+    "morgan": "1.9.1",
+    "multer": "1.4.1",
+    "nodemailer": "6.3.0",
+    "nodemailer-express-handlebars": "3.1.0",
+    "rimraf": "2.6.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
