--- a/client/package.json
+++ b/client/package.json
@@ -33,10 +33,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "set CI=true&& npm run test:all",
+    "test": "set CI=true && npm run test:all",
     "test:coverage": "react-scripts test --coverage",
     "precommit": "lint-staged",
-    "test:all": "react-scripts test --env=jsdom",
+    "test:all": "react-scripts test",
     "test:part": "react-scripts test --u",
     "push": "cd .. && npm run push && cd client"
   },
