--- a/client/package.json
+++ b/client/package.json
@@ -68,7 +68,8 @@
     "husky": "1.2.1",
     "lint-staged": "8.1.0",
     "prettier": "1.15.3",
-    "redux-mock-store": "1.5.3"
+    "redux-mock-store": "1.5.3",
+    "redux-saga-test-plan": "^4.0.0-beta.4"
   },
   "lint-staged": {
     "*.{js, jsx}": [
