--- a/client/package.json
+++ b/client/package.json
@@ -68,6 +68,7 @@
     "husky": "1.2.1",
     "lint-staged": "8.1.0",
     "prettier": "1.15.3",
+    "react-test-renderer": "^16.9.0",
     "redux-mock-store": "1.5.3",
     "redux-saga-test-plan": "^4.0.0-beta.4"
   },
