--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loft-taxi-app",
+  "name": "mail-verifyer",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
