--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
       "path": "node_modules/cz-customizable"
     },
     "cz-customizable": {
-      "config": "./config/git/commitizen.js"
+      "config": "config/git/commitizen.js"
     }
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g './config/git/commitlint.js'",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS -g config/git/commitlint.js",
       "pre-commit": "cd client && npm t"
     }
   }
